--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,7 +6,7 @@
     "com.unity.timeline": "1.7.3",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.8.0",
-    "com.zknight.zxmlui": "https://github.com/ZSaltedFish/ZXMLui.git#1.0.2",
+    "com.zknight.zxmlui": "https://github.com/ZSaltedFish/ZXMLui.git#LTS",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -38,5 +38,14 @@
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
-  }
+  },
+  "scopedRegistries": [
+    {
+      "name": "com.zknight.zxmlui",
+      "url": "https://github.com/ZSaltedFish/ZXMLui.git#LTS",
+      "scopes": [
+        "com.zknight"
+      ]
+    }
+  ]
 }
