--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "url": "https://github.com/ZSaltedFish/UFlowChart/issues"
   },
   "homepage": "https://github.com/ZSaltedFish/UFlowChart#readme",
-  "displayName": "U Flow Chart"
+  "displayName": "U Flow Chart",
+  "dependencies": {
+    "com.zknight.zxmlui": "1.0.3"
+  },
+  "unity": "2019.2"
 }
