--- a/Packages/FlowChart/Editor/ZKnight.UFlowChart.Editor.asmdef
+++ b/Packages/FlowChart/Editor/ZKnight.UFlowChart.Editor.asmdef
@@ -5,7 +5,9 @@
         "GUID:0105a76d32e8023498594335437973ec",
         "GUID:fd2089028ea03f0458b588e5e8b8cb4f"
     ],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
