--- a/Packages/FlowChart/package.json
+++ b/Packages/FlowChart/package.json
@@ -25,7 +25,7 @@
   "homepage": "https://github.com/ZSaltedFish/UFlowChart#readme",
   "displayName": "U Flow Chart",
   "dependencies": {
-    "com.zknight.zxmlui": "1.0.3"
+    "com.zknight.zxmlui": "https://github.com/ZSaltedFish/ZXMLui.git?path=Packages/ZXMLui"
   },
   "unity": "2019.2"
 }
